--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" type="text/css" href="index.css">
-    <link rel="stylesheet" type="text/css" href="menu.css">
+    <!-- <link rel="stylesheet" type="text/css" href="menu.css"> -->
 </head>
 
 
@@ -27,7 +27,7 @@
     </div>
 </div>
 </body>
-<p>d</p>
+
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -43,10 +43,10 @@
         <div>
             <nav class="nav">
                 <div class="nav__links">
-                    <a href="/index.html" class="nav__link">
+                    <a href="index.html" class="nav__link">
                         <i class="material-icons">home</i> Home Page
                     </a>
-                    <a href="/navigation_pages/milk_reg.html" class="nav__link">
+                    <a href="navigation_pages/milk_reg.html" class="nav__link">
                         <i class="material-icons">border_color</i> Milk Data Entry
                     </a>
                     <a class="nav__link" href="/navigation_pages/milk_report.html">
