--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- this is div of body -->
 <div class="body">
     <div class="box">
-        <a href="/components/breed_1.html" class="img1">
+        <a href="/components/breeds.html" class="img1">
             <div class="breed_1">bread_1</div>
         </a>
         <div class="breed_2">bread_2</div>
